주석 추가 및 기타 보완 작업

--- a/www/src/styles/style2.css
+++ b/www/src/styles/style2.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 /* 주석 1 */
 /* 주석 23 */
-a {
-  -ms-transform: rotate(48deg);
-      transform: rotate(48deg); }
+h1 {
+  color: blue; }
