--- a/www/src/styles/style.css
+++ b/www/src/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* 주석 1 */
 /* 주석 23 */
-div {
-  -ms-transform: rotate(46deg);
-      transform: rotate(46deg); }
+h1 {
+  -ms-transform: rotate(3deg);
+      transform: rotate(3deg); }
